Fix inconsistent logo sizes and social link spacing

--- a/_sass/3-modules/_logos.scss
+++ b/_sass/3-modules/_logos.scss
@@ -28,11 +28,11 @@
 }
 
 .logos__image {
-  height: 36px;
+  height: 2.25rem;
   filter: invert(51%) sepia(4%) saturate(1703%) hue-rotate(179deg) brightness(85%) contrast(89%);
 
   @media (max-width: $mobile) {
-    height: 32px;
+    height: 2rem;
   }
 }
 
