--- a/_sass/3-modules/_testimonials.scss
+++ b/_sass/3-modules/_testimonials.scss
@@ -34,7 +34,7 @@
 
     .social__item {
       margin-bottom: 0;
-      margin-right: 6px;
+      margin-right: 0.375rem;
 
       &:last-child {
         margin-right: 0;
@@ -45,8 +45,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 24px;
-      height: 24px;
+      width: 1.5rem;
+      height: 1.5rem;
       font-size: 0.875rem;
       border-radius: 50%;
       will-change: transform;
@@ -62,12 +62,12 @@
 
     @media (max-width: $mobile) {
       .social__item {
-        margin-right: 4px;
+        margin-right: 0.25rem;
       }
 
       .social__link {
-        width: 20px;
-        height: 20px;
+        width: 1.25rem;
+        height: 1.25rem;
         font-size: 0.75rem;
       }
     }
